crates/strider-analyze/tests/snapshots/v3__arm__calling_convention__sink16.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x28:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "12" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10000002c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "3" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x100000020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x10000001c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x100000018:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x100000014:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x100000010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x10000000c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x100000008:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x100000004:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "57" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "63" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "7" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
